[package]
name = "blagger"
version = "0.1.1"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"
repository = "https://github.com/c-x-berger/blagger"
license = "MIT OR Apache-2.0"
description = "the stupid static site generator fer yer blag"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["static", "site", "generator", "markdown", "blog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tinytemplate = "1.0"
toml = "0.5"
